// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createForeignKeyConstraint [postgres] > create SQL schema (with global createForeignKeyConstraints set to false) > createSchemaSQL-dump 1`] = `
"set names 'utf8';

create table "author" ("id" serial primary key, "name" varchar(255) not null);

create table "author_following" ("author_1_id" int not null, "author_2_id" int not null, primary key ("author_1_id", "author_2_id"));

create table "author_address" ("author_id" int not null, "value" varchar(255) not null, primary key ("author_id"));

create table "book_tag" ("id" serial primary key, "name" varchar(255) not null);

create table "publisher" ("id" serial primary key, "name" varchar(255) not null);

create table "book" ("id" serial primary key, "title" varchar(255) not null, "author_id" int not null, "publisher_id" int not null);

create table "book_tags" ("book_id" int not null, "book_tag_id" int not null, primary key ("book_id", "book_tag_id"));

create table "publisher_address" ("publisher_id" int not null, "value" varchar(255) not null, primary key ("publisher_id"));
"
`;

exports[`createForeignKeyConstraint [postgres] > create SQL schema > createSchemaSQL-dump 1`] = `
"set names 'utf8';

create table "author" ("id" serial primary key, "name" varchar(255) not null);

create table "author_following" ("author_1_id" int not null, "author_2_id" int not null, primary key ("author_1_id", "author_2_id"));

create table "author_address" ("author_id" int not null, "value" varchar(255) not null, primary key ("author_id"));

create table "book_tag" ("id" serial primary key, "name" varchar(255) not null);

create table "publisher" ("id" serial primary key, "name" varchar(255) not null);

create table "book" ("id" serial primary key, "title" varchar(255) not null, "author_id" int not null, "publisher_id" int not null);

create table "book_tags" ("book_id" int not null, "book_tag_id" int not null, primary key ("book_id", "book_tag_id"));

create table "publisher_address" ("publisher_id" int not null, "value" varchar(255) not null, primary key ("publisher_id"));

alter table "author_following" add constraint "author_following_author_1_id_foreign" foreign key ("author_1_id") references "author" ("id") on update cascade on delete cascade;
alter table "author_following" add constraint "author_following_author_2_id_foreign" foreign key ("author_2_id") references "author" ("id") on update cascade on delete cascade;

alter table "author_address" add constraint "author_address_author_id_foreign" foreign key ("author_id") references "author" ("id") on update cascade on delete cascade;

alter table "book" add constraint "book_author_id_foreign" foreign key ("author_id") references "author" ("id") on update cascade;
"
`;
